# ClothDD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: app.cpp  app.hpp  cloth.cpp  cloth.hpp  gpu_solver.cpp  gpu_solver.hpp  hdri.cpp  hdri.hpp  main.cpp  render.cpp  render.hpp  texture.cpp  texture.hpp  thread_pool.hpp  ui.cpp  ui.hpp
